--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,10 @@
+@use "./partials/reset.scss";
+@use "./partials/utility.scss";
+@use "./partials/variables.scss" as *;
+
+body {
+  background-color: $blue-200;
+}
 .images {
   display: flex;
   flex-wrap: wrap;
