feat: welcome page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,12 +1,8 @@
 @use "./partials/reset.scss";
 @use "./partials/utility.scss";
+@use "./partials/common.scss";
 @use "./partials/variables.scss" as *;
 
-body {
-  background-color: $blue-200;
-
-  color: white;
-}
 .images {
   display: flex;
   flex-wrap: wrap;
