--- a/src/assets/scss/partials/_common.scss
+++ b/src/assets/scss/partials/_common.scss
@@ -9,9 +9,13 @@ body {
   .img-container {
     width: calc(100% / 6 - 20px);
     margin: 10px;
-
     img {
       height: 400px;
+    }
+    .card {
+      display: none;
+      height: 400px;
+      background-color: rebeccapurple;
     }
   }
 }
