--- a/src/assets/scss/partials/_common.scss
+++ b/src/assets/scss/partials/_common.scss
@@ -23,6 +23,8 @@ body {
     }
     .card {
       display: none;
+      height: 400px;
+      overflow: hidden;
       padding: 20px;
       background-color: $black;
       border: 1px solid $beige;
