--- a/src/assets/scss/partials/_common.scss
+++ b/src/assets/scss/partials/_common.scss
@@ -4,14 +4,17 @@ body {
   font-family: "Bebas Neue", sans-serif;
   background-color: $blue-200;
   color: white;
+  font-size: 1.25rem;
 }
 //!griglia immagini
 .images {
   flex-wrap: wrap;
   margin: 0 -10px;
+
   .img-container {
     width: calc(100% / 6 - 20px);
     margin: 10px;
+
     &:hover img {
       display: none;
     }
@@ -23,17 +26,29 @@ body {
     }
     .card {
       display: none;
-      height: 400px;
       overflow: hidden;
       padding: 20px;
       background-color: $black;
       border: 1px solid $beige;
-      h3 {
-        color: $beige;
-        margin-right: 10px;
+      position: relative;
+
+      .btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 5px;
+        font-size: 18px;
+        cursor: pointer;
       }
-      .star-vote {
-        display: flex;
+      h3 {
+        font-size: 1.5625rem;
+        color: $beige;
+        margin-right: 0.625rem;
+        margin-top: 0.625rem;
+      }
+      .show-overview {
+        text-decoration: underline;
+        color: $blue-300;
       }
     }
   }
